tests/parse_print/random_perturb/set01/delete-07/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/delete-07/delete-07.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/delete-07/delete-07.essence:3:10:
  |
3 | find x : et (size 2) of int(1..3)
  |          ^^
Error: Symbol not found "et"

tests/parse_print/random_perturb/set01/delete-07/delete-07.essence:3:22:
  |
3 | find x : et (size 2) of int(1..3)
  |                      ^^^^^^^^^^^^
Skipped tokens
